--- a/index.html
+++ b/index.html
@@ -3,15 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF eBook Reader</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PDF Flipbook</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.css">
+    <style>
+        #flipbook {
+            width: 100%;
+            height: 600px;
+            margin: auto;
+        }
+        .page {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background: #fff;
+        }
+        canvas {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>eBook Reader</h1>
-    <div id="pdf-viewer">
-        <canvas id="pdf-canvas"></canvas>
-    </div>
-    <script src="pdfjs/pdf.js"></script>
-    <script src="script.js"></script>
+    <div id="flipbook"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+    <script>
+        const pdfUrl = 'URL_TO_YOUR_PDF_FILE'; // Replace with your PDF URL
+
+        pdfjsLib.getDocument(pdfUrl).promise.then(pdf => {
+            const numPages = pdf.numPages;
+
+            function renderPage(pageNum) {
+                pdf.getPage(pageNum).then(page => {
+                    const scale = 1.5;
+                    const viewport = page.getViewport({ scale });
+                    const canvas = document.createElement('canvas');
+                    const context = canvas.getContext('2d');
+                    canvas.height = viewport.height;
+                    canvas.width = viewport.width;
+                    document.querySelector('#flipbook').appendChild(canvas);
+
+                    const renderContext = {
+                        canvasContext: context,
+                        viewport: viewport
+                    };
+                    page.render(renderContext).promise.then(() => {
+                        if (pageNum < numPages) {
+                            renderPage(pageNum + 1);
+                        }
+                    });
+                });
+            }
+
+            renderPage(1);
+        });
+
+        $(document).ready(function(){
+            $('#flipbook').turn({
+                width: 800,
+                height: 600,
+                autoCenter: true
+            });
+        });
+    </script>
 </body>
 </html>
