--- a/index.html
+++ b/index.html
@@ -4,36 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Flipbook</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.css">
-    <style>
-        #flipbook {
-            width: 100%;
-            height: 600px;
-            margin: auto;
-        }
-        .page {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            background: #fff;
-        }
-        canvas {
-            width: 100%;
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div id="flipbook"></div>
 
+    <!-- Include Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
     <script>
-        const pdfUrl = 'URL_TO_YOUR_PDF_FILE'; // Replace with your PDF URL
+        const pdfUrl = 'https://drive.google.com/uc?id=YOUR_FILE_ID'; // Replace with your Google Drive file ID
 
         pdfjsLib.getDocument(pdfUrl).promise.then(pdf => {
             const numPages = pdf.numPages;
+            const flipbook = $('#flipbook');
 
             function renderPage(pageNum) {
                 pdf.getPage(pageNum).then(page => {
@@ -43,7 +29,7 @@
                     const context = canvas.getContext('2d');
                     canvas.height = viewport.height;
                     canvas.width = viewport.width;
-                    document.querySelector('#flipbook').appendChild(canvas);
+                    flipbook.append(canvas);
 
                     const renderContext = {
                         canvasContext: context,
