--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 
     <script>
-        const pdfUrl = 'https://drive.google.com/uc?id=YOUR_FILE_ID'; // Replace with your Google Drive file ID
+        const pdfUrl = 'https://drive.google.com/file/d/1pTUYcKslF9F3jpGwzADKQ1_tD92snotF/view?usp=drive_link'; // Replace with your Google Drive file ID
 
         pdfjsLib.getDocument(pdfUrl).promise.then(pdf => {
             const numPages = pdf.numPages;
