--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF eBook Reader</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Artbook Flipbook</title>
+  <script src="path/to/turn.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    #flipbook {
+      width: 800px;
+      height: 500px;
+    }
+    .page {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-    <div id="flipbook"></div>
+  <div id="flipbook">
+    <div class="page"><img src="page1.jpg" alt="Page 1"></div>
+    <div class="page"><img src="page2.jpg" alt="Page 2"></div>
+    <!-- Add more pages as needed -->
+  </div>
 
-    <!-- Include Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/pdf-flip@1.0.0/dist/pdf-flip.min.js"></script>
-    <script src="script.js"></script>
+  <script>
+    $("#flipbook").turn({
+      width: 800,
+      height: 500,
+      autoCenter: true
+    });
+  </script>
 </body>
 </html>
