--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artbook Flipbook</title>
-  <script src="path/to/turn.js"></script>
+  <script src="path/to/turn.js"></script> <!-- Update this path to where your turn.js file is -->
   <style>
     body {
       margin: 0;
@@ -16,26 +16,34 @@
       background-color: #f0f0f0;
     }
     #flipbook {
-      width: 800px;
-      height: 500px;
+      width: 1000px; /* Adjust this width to match your image spread size */
+      height: 600px; /* Adjust this height to match your image spread size */
     }
     .page {
       width: 100%;
       height: 100%;
     }
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
   <div id="flipbook">
-    <div class="page"><img src="page1.jpg" alt="Page 1"></div>
-    <div class="page"><img src="page2.jpg" alt="Page 2"></div>
-    <!-- Add more pages as needed -->
+    <!-- Add your spreads as images here -->
+    <div class="page"><img src="spread1.jpg" alt="Spread 1"></div>
+    <div class="page"><img src="spread2.jpg" alt="Spread 2"></div>
+    <div class="page"><img src="spread3.jpg" alt="Spread 3"></div>
+    <!-- Add more spreads as needed -->
   </div>
 
   <script>
     $("#flipbook").turn({
-      width: 800,
-      height: 500,
+      width: 1000,  // Match these dimensions to your image spread size
+      height: 600,
       autoCenter: true
     });
   </script>
