--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div id="flipbook">
     <!-- Add your spreads as images here -->
-    <div class="page"><img src="spread1.jpg" alt="Spread 1"></div>
+    <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Spread 1"></div>
     <div class="page"><img src="spread2.jpg" alt="Spread 2"></div>
     <div class="page"><img src="spread3.jpg" alt="Spread 3"></div>
     <!-- Add more spreads as needed -->
