--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artbook Flipbook</title>
-  <script src="path/to/turn.js"></script> <!-- Update this path to where your turn.js file is -->
+  <script src="turn.js"></script> <!-- Update this path to where your turn.js file is -->
   <style>
     body {
       margin: 0;
