--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artbook Flipbook</title>
-  <script src="turn.js"></script> <!-- Update this path to where your turn.js file is -->
+  <script src="https://cdn.rawgit.com/blasten/turn.js/4.1.0/turn.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -23,6 +23,7 @@
     .page {
       width: 100%;
       height: 100%;
+      background-color: #ccc; /* Add a background color to the pages */
     }
     img {
       display: block;
@@ -34,18 +35,17 @@
 </head>
 <body>
   <div id="flipbook">
-    <!-- Add your spreads as images here -->
-    <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Spread 1"></div>
-    <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Spread 2"></div>
-    <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Spread 3"></div>
+    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover.jpg" alt="Spread 1"></div>
+    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover2.jpg" alt="Spread 2"></div>
+    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover3.jpg" alt="Spread 3"></div>
     <!-- Add more spreads as needed -->
   </div>
 
   <script>
     $("#flipbook").turn({
-      width: 1000,  // Match these dimensions to your image spread size
-      height: 600,
-      autoCenter: true
+      gradients: true, // Enabling gradients
+      acceleration: true, // Enabling acceleration
+      autoCenter: true // Automatically centers the flipbook
     });
   </script>
 </body>
