--- a/index.html
+++ b/index.html
@@ -1,52 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Artbook Flipbook</title>
-  <script src="https://cdn.rawgit.com/blasten/turn.js/4.1.0/turn.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f0f0f0;
-    }
-    #flipbook {
-      width: 1000px; /* Adjust this width to match your image spread size */
-      height: 600px; /* Adjust this height to match your image spread size */
-    }
-    .page {
-      width: 100%;
-      height: 100%;
-      background-color: #ccc; /* Add a background color to the pages */
-    }
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+    <title>Flipbook Example</title>
+    <link rel="stylesheet" type="text/css" href="path/to/turn.css">
+    <script src="path/to/jquery.min.js"></script>
+    <script src="path/to/turn.min.js"></script>
 </head>
 <body>
-  <div id="flipbook">
-    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover.jpg" alt="Spread 1"></div>
-    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover2.jpg" alt="Spread 2"></div>
-    <div class="page"><img src="Thresholds_jpg_spreads/Thresholds_Final_Page_Spreads_with_Cover3.jpg" alt="Spread 3"></div>
-    <!-- Add more spreads as needed -->
-  </div>
+    <div id="flipbook">
+        <div><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
+        <!-- Add more images as needed -->
+    </div>
 
-  <script>
-    $("#flipbook").turn({
-      gradients: true, // Enabling gradients
-      acceleration: true, // Enabling acceleration
-      autoCenter: true // Automatically centers the flipbook
-    });
-  </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#flipbook").turn({
+                width: 800,
+                height: 600,
+                autoCenter: true
+            });
+        });
+    </script>
 </body>
 </html>
