--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Flipbook Example</title>
-    <link rel="stylesheet" type="text/css" href="path/to/turn.css">
+    <link rel="stylesheet" type="text/css" href="flipbook.css">
     <script src="path/to/jquery.min.js"></script>
     <script src="path/to/turn.min.js"></script>
 </head>
 <body>
     <div id="flipbook">
-        <div><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
-        <!-- Add more images as needed -->
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
+        <!-- Add more pages as needed -->
     </div>
 
     <script type="text/javascript">
