--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Flipbook Example</title>
     <link rel="stylesheet" type="text/css" href="flipbook.css">
-    <script src="path/to/jquery.min.js"></script>
-    <script src="path/to/turn.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
     <div id="flipbook">
