--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipbook</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Flipbook Example</title>
+    <link rel="stylesheet" type="text/css" href="flipbook.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="images/page1.jpg" alt="Page 1"></div>
-        <div class="page"><img src="images/page2.jpg" alt="Page 2"></div>
-        <!-- Repeat for all your pages -->
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
+        <!-- Add more pages as needed -->
     </div>
-    <script src="script.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#flipbook").turn({
+                width: 800,
+                height: 600,
+                autoCenter: true
+            });
+        });
+    </script>
 </body>
 </html>
