--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="flipbook">
         <div class="page"><img src="Thresholdsjpgspreads/ThresholdsFinalPageSpreadswithCover.jpg"></div>
+         <div class="page"><img src="Thresholdsjpgspreads/ThresholdsFinalPageSpreadswithCover2.jpg"></div>
         <!-- Add more pages as needed -->
     </div>
 
