--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>Flipbook Example</title>
     <link rel="stylesheet" type="text/css" href="flipbook.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="turn.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="thresholds/Thresholdsjpgspreads/ThresholdsFinalPageSpreadswithCover.jpg"></div>
+        <div class="page"><img src="Thresholdsjpgspreads/ThresholdsFinalPageSpreadswithCover.jpg"></div>
         <!-- Add more pages as needed -->
     </div>
 
