--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="Thresholdsjpgspreads/ThresholdsFinalPageSpreadswithCover.jpg"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
         <div class="page"><img src="Thresholds jpg spreads/SecondPage.jpg"></div>
         <!-- Add more pages as needed -->
     </div>
