--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="flipbook">
         <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
-        <div class="page"><img src="Thresholds jpg spreads/SecondPage.jpg"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg"></div>
         <!-- Add more pages as needed -->
     </div>
 
