--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="flipbook">
         <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
         <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg"></div>
         <!-- Add more pages as needed -->
     </div>
 
