--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" type="text/css" href="flipbook.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="turn.min.js"></script>
-    <!-- Remove the following line to avoid conflict -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script> -->
 </head>
 <body>
     <div id="flipbook">
@@ -25,6 +23,7 @@
                     width: 800,
                     height: 600,
                     autoCenter: true
+                    // Add more options as needed
                 });
             }
         });
