--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3"></div>
         <!-- Add more pages as needed -->
     </div>
 
@@ -21,10 +21,15 @@
             } else {
                 console.log('Turn.js loaded successfully');
                 $("#flipbook").turn({
-                    width: 800,
-                    height: 600,
+                    width: 1200, // Adjusted width to accommodate larger images
+                    height: 1200, // Adjusted height to accommodate larger images
                     autoCenter: true,
-                    pages: 3 // Ensure this matches the number of pages
+                    pages: 3, // Ensure this matches the number of pages
+                    when: {
+                        turned: function(e, page) {
+                            console.log('Current view: ', $(this).turn('view'));
+                        }
+                    }
                 });
             }
         });
