--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
             function updateFlipbookSize() {
                 var firstPage = flipbook.find('.page img').first();
+                if (firstPage.length === 0) {
+                    console.error("No images found in the flipbook.");
+                    return;
+                }
                 var newWidth = firstPage.width();
                 var newHeight = firstPage.height();
 
@@ -28,10 +32,11 @@
                     width: newWidth,
                     height: newHeight,
                     autoCenter: true,
-                    pages: 3,
+                    pages: flipbook.find('.page').length,
                     when: {
                         turned: function(e, page) {
-                            console.log('Current view: ', $(this).turn('view'));
+                            var currentView = $(this).turn('view');
+                            console.log('Current view: ', currentView);
                         }
                     }
                 });
@@ -45,6 +50,20 @@
             if (firstPage.prop('complete')) {
                 updateFlipbookSize();
             }
+
+            // Event listeners for flipping pages on click
+            flipbook.on('click', '.page', function() {
+                flipbook.turn('next');
+            });
+
+            // Event listeners for flipping pages with arrow keys
+            $(document).keydown(function(e) {
+                if (e.key === "ArrowRight") {
+                    flipbook.turn('next');
+                } else if (e.key === "ArrowLeft") {
+                    flipbook.turn('previous');
+                }
+            });
         });
     </script>
 </body>
