--- a/index.html
+++ b/index.html
@@ -6,31 +6,18 @@
     <link rel="stylesheet" type="text/css" href="flipbook.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="turn.min.js"></script>
-    <style>
-        .page img.split {
-            width: 50%;
-            height: auto;
-            object-fit: contain;
-        }
-    </style>
 </head>
 <body>
     <div id="flipbook">
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" class="split" alt="Cover Left">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" class="split" alt="Cover Right" style="transform: scaleX(-1);">
-        </div>
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" class="split" alt="Page 2 Left">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" class="split" alt="Page 2 Right" style="transform: scaleX(-1);">
-        </div>
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" class="split" alt="Page 3 Left">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" class="split" alt="Page 3 Right" style="transform: scaleX(-1);">
-        </div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Left" class="left"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Right" class="right"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left" class="left"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right" class="right"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left" class="left"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right" class="right"></div>
         <!-- Add more pages as needed -->
     </div>
-    
+
     <script type="text/javascript">
         $(document).ready(function() {
             var flipbook = $("#flipbook");
@@ -41,14 +28,14 @@
                     console.error("No images found in the flipbook.");
                     return;
                 }
-                var newWidth = firstPage[0].naturalWidth * 2; // Each spread spans across two pages
+                var newWidth = firstPage[0].naturalWidth;
                 var newHeight = firstPage[0].naturalHeight;
 
                 flipbook.turn({
-                    width: newWidth,
+                    width: newWidth * 2,
                     height: newHeight,
                     autoCenter: true,
-                    display: 'double', // Ensure double display for spreads
+                    display: 'double',
                     when: {
                         turned: function(e, page) {
                             var currentView = $(this).turn('view');
