--- a/index.html
+++ b/index.html
@@ -9,12 +9,36 @@
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" class="left-half" alt="Cover Left"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" class="right-half" alt="Cover Right"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" class="left-half" alt="Page 2 Left"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" class="right-half" alt="Page 2 Right"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" class="left-half" alt="Page 3 Left"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" class="right-half" alt="Page 3 Right"></div>
+        <div class="page">
+            <div class="left-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Left">
+            </div>
+        </div>
+        <div class="page">
+            <div class="right-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Right">
+            </div>
+        </div>
+        <div class="page">
+            <div class="left-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
+            </div>
+        </div>
+        <div class="page">
+            <div class="right-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
+            </div>
+        </div>
+        <div class="page">
+            <div class="left-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
+            </div>
+        </div>
+        <div class="page">
+            <div class="right-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
+            </div>
+        </div>
         <!-- Add more pages as needed -->
     </div>
 
