--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <div id="flipbook">
+        <!-- First spread (cover) should not be split -->
         <div class="page">
-            <div class="left-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Left">
-            </div>
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
         <div class="page">
-            <div class="right-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover Right">
-            </div>
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
+        
+        <!-- Remaining spreads should be split across two pages -->
         <div class="page">
             <div class="left-half">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
