--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 <body>
     <div id="flipbook">
         <!-- First spread (cover) should not be split -->
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
-        </div>
-        <div class="page">
+        <div class="page cover">
             <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
         </div>
         
         <!-- Remaining spreads should be split across two pages -->
-        <div class="page">
+        <div class="page spread">
             <div class="left-half">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
             </div>
         </div>
-        <div class="page">
+        <div class="page spread">
             <div class="right-half">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
             </div>
         </div>
-        <div class="page">
+        <div class="page spread">
             <div class="left-half">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
             </div>
         </div>
-        <div class="page">
+        <div class="page spread">
             <div class="right-half">
                 <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
             </div>
