--- a/index.html
+++ b/index.html
@@ -2,32 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flipbook Test</title>
-    <link rel="stylesheet" type="text/css" href="flipbook.css">
+    <title>Basic Flipbook</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="turn.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/3/turn.min.js"></script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+        }
+        #flipbook {
+            width: 800px;
+            height: 400px;
+            background-color: white;
+            border: 1px solid #ccc;
+        }
+        .page {
+            width: 100%;
+            height: 100%;
+        }
+        .page img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     <div id="flipbook">
-        <!-- A basic two-page spread to test -->
-        <div class="page">
-            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
-        </div>
-        <div class="page">
-            <div class="left-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Left half">
-            </div>
-            <div class="right-half">
-                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Right half">
-            </div>
-        </div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2"></div>
+        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3"></div>
     </div>
 
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#flipbook').turn({
+            $("#flipbook").turn({
                 width: 800,
-                height: 500,
+                height: 400,
                 autoCenter: true
             });
         });
