--- a/index.html
+++ b/index.html
@@ -2,47 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic Flipbook</title>
+    <title>Flipbook Example</title>
+    <link rel="stylesheet" type="text/css" href="flipbook.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/3/turn.min.js"></script>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-            margin: 0;
-        }
-        #flipbook {
-            width: 800px;
-            height: 400px;
-            background-color: white;
-            border: 1px solid #ccc;
-        }
-        .page {
-            width: 100%;
-            height: 100%;
-        }
-        .page img {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
     <div id="flipbook">
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2"></div>
-        <div class="page"><img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3"></div>
+        <!-- First spread (cover) should not be split -->
+        <div class="page cover">
+            <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover.jpg" alt="Cover">
+        </div>
+
+        <!-- Spread 1: Left and Right Halves -->
+        <div class="page spread">
+            <div class="left-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Left">
+            </div>
+            <div class="right-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover2.jpg" alt="Page 2 Right">
+            </div>
+        </div>
+
+        <!-- Spread 2: Left and Right Halves -->
+        <div class="page spread">
+            <div class="left-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Left">
+            </div>
+            <div class="right-half">
+                <img src="Thresholds jpg spreads/Thresholds Final Page Spreads with Cover3.jpg" alt="Page 3 Right">
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript">
         $(document).ready(function() {
-            $("#flipbook").turn({
-                width: 800,
-                height: 400,
-                autoCenter: true
+            var flipbook = $("#flipbook");
+
+            // Initialize flipbook with correct dimensions
+            function updateFlipbookSize() {
+                var firstPage = flipbook.find('.page img').first();
+                var newWidth = firstPage[0].naturalWidth / 2; // Each page is half the width of the spread
+                var newHeight = firstPage[0].naturalHeight;
+
+                flipbook.turn({
+                    width: newWidth * 2, // Set to the full spread width
+                    height: newHeight,
+                    autoCenter: true,
+                    display: 'double',
+                    when: {
+                        turned: function(e, page) {
+                            var currentView = $(this).turn('view');
+                            console.log('Current view: ', currentView);
+                        }
+                    }
+                });
+            }
+
+            var firstPage = flipbook.find('.page img').first();
+            firstPage.on('load', function() {
+                updateFlipbookSize();
+            });
+
+            if (firstPage.prop('complete')) {
+                updateFlipbookSize();
+            }
+
+            // Flipping pages with arrow keys
+            $(document).keydown(function(e) {
+                if (e.key === "ArrowRight") {
+                    flipbook.turn('next');
+                } else if (e.key === "ArrowLeft") {
+                    flipbook.turn('previous');
+                }
             });
         });
     </script>
